# qforge-nuq

./: .gitignore  Makefile.am  TODO  acconfig.h  configure.in
RPM/: .gitignore  Makefile.am  build_rpm.in  nuq.spec.in
include/: .gitignore  Makefile.am  asm_ia32.h  bspfile.h  cdaudio.h  chase.h  client.h  cmd.h  commdef.h  common.h  config.h  config.h.in  console.h  context_x11.h  crc.h  cvar.h  d_iface.h  d_local.h  dga_check.h  draw.h  gib_error.h  gib_instructions.h  gib_interpret.h  gib_modules.h  gib_parse.h  gib_vars.h  gl_model.h  glquake.h  glquake2.h  host.h  input.h  joystick.h  keys.h  mathlib.h  model.h  net.h  net_udp.h  pr_comp.h  progs.h  protocol.h  (+19 more)
include/win32/: version.h
include/win32/vc/: config.h
source/: .gdbinit  .gitignore  Makefile.am  cd_audio.c  cd_linux.c  cd_null.c  cd_win.c  cl_cam.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  cmd.c  com.c  common.c  conproc.c  console.c  context_x11.c  crc.c  cvar.c  d_copy.S  d_edge.c  d_fill.c  d_init.c  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  dga_check.c  dos_v2.c  draw.c  gib.c  gib_instructions.c  gib_interpret.c  (+142 more)
